--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,18 @@ function showTab(id) {
   document.getElementById(id).classList.add('active');
 }
 
+function downloadCsv(csvText, filename) {
+  const blob = new Blob([csvText], {type: 'text/csv;charset=utf-8;'});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = filename;
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  URL.revokeObjectURL(url);
+}
+
 async function readUpload(input) {
   const file = input.files[0];
   if (!file) {
@@ -74,6 +86,7 @@ async function processJobs() {
   const data = await res.json();
   jobsCsv = data.csv;
   document.getElementById('jobsCsv').textContent = jobsCsv;
+  downloadCsv(jobsCsv, 'jobs.csv');
 }
 
 async function processSeekers() {
@@ -87,6 +100,7 @@ async function processSeekers() {
   const data = await res.json();
   seekersCsv = data.csv;
   document.getElementById('seekersCsv').textContent = seekersCsv;
+  downloadCsv(seekersCsv, 'seekers.csv');
 }
 
 async function runMatch() {
